# cbag_polygon

./: .bashrc  .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  run_test.sh
doc/: notes.md
include/cbag/polygon/: boost_adapt.h  enum.h  geo_index.h  interval_concept.h  interval_data.h  math.h  point_concept.h  point_data.h  polygon_45_concept.h  polygon_45_data.h  polygon_45_set_detail.h  polygon_90_concept.h  polygon_90_data.h  polygon_90_set_detail.h  polygon_concept.h  polygon_data.h  polygon_data_base.h  polygon_set_data.h  rectangle_concept.h  rectangle_data.h  tag.h  transformation.h  transformation_util.h
include/cbag/util/: iterators.h  overload.h
include/cbag/yaml/: orientation.h  point_data.h  polygon_45_data.h  polygon_90_data.h  polygon_data.h  polygon_data_base.h  rectangle_data.h  transformation.h
include/yaml-cpp/: tuple.h  unique_ptr.h  unordered_map.h
tests/: CMakeLists.txt  main.cpp
tests/cbag/polygon/: geo_index.cpp  interval_data.cpp  point_data.cpp  polygon_45_data.cpp  polygon_45_set_vertex.cpp  polygon_90_data.cpp  polygon_data.cpp  polygon_set_data.cpp  rectangle_data.cpp  transformation.cpp
tests/data/cbag/polygon/: interval_data.yaml
tests/data/cbag/polygon/geo_index/: get_intersect.yaml  insert_inst.yaml  insert_poly45.yaml  insert_rect.yaml
tests/data/cbag/polygon/polygon_45_data/: area.yaml  convolve_rect.yaml  expand.yaml  iterator.yaml
tests/data/cbag/polygon/polygon_45_set_vertex/: less_than.yaml
tests/data/cbag/polygon/polygon_90_data/: convolve_rect.yaml  expand.yaml  is_positive.yaml  points.yaml
tests/data/cbag/polygon/polygon_90_set_data/: boolean_and.yaml  boolean_subtract.yaml  get_polygons.yaml  insert_poly90.yaml  insert_rect.yaml
tests/data/cbag/polygon/polygon_data/: is_positive.yaml  points.yaml  poly_reduce.yaml
tests/data/cbag/polygon/polygon_set_data/: boolean_and_simple.yaml  clean_poly45.yaml  clean_poly90.yaml  convolve_rect_poly45.yaml  convolve_rect_poly90.yaml  get_holes.yaml  get_polygons_45.yaml  get_polygons_90.yaml  get_polygons_frac.yaml  insert_poly.yaml  insert_poly45_invert.yaml  insert_poly90.yaml  insert_poly90_invert.yaml  insert_poly_multiple.yaml  insert_rect.yaml  invert.yaml  move.yaml  rect_array.yaml
tests/data/cbag/polygon/rectangle_data/: convolve.yaml  expand.yaml  getter.yaml
tests/data/cbag/polygon/transformation/: polygon_45_set_vertex.yaml  transform.yaml  transform_poly90.yaml  transform_polygon_set_90.yaml  transform_rect.yaml
tests/include/cbag/tests/: io.h
